# flip-solver

./: CMakeLists.txt  ReadMe.md
example_simulation/csv_files/: test000.csv  test001.csv  test002.csv  test003.csv  test004.csv  test005.csv  test006.csv  test007.csv  test008.csv  test009.csv  test010.csv  test011.csv  test012.csv  test013.csv  test014.csv  test015.csv  test016.csv  test017.csv  test018.csv  test019.csv  test020.csv  test021.csv  test022.csv  test023.csv  test024.csv  test025.csv  test026.csv  test027.csv  test028.csv  test029.csv  test030.csv  test031.csv  test032.csv  test033.csv  test034.csv  test035.csv  test036.csv  test037.csv  test038.csv  test039.csv  (+110 more)
example_simulation/data/: cells.vtk.001  cells.vtk.005  cells.vtk.006  cells.vtk.007  cells.vtk.008  cells.vtk.009  cells.vtk.010  cells.vtk.011  cells.vtk.012  cells.vtk.013  cells.vtk.014  cells.vtk.015  cells.vtk.016  cells.vtk.017  cells.vtk.018  cells.vtk.019  cells.vtk.020  cells.vtk.021  cells.vtk.022  cells.vtk.023  cells.vtk.024  cells.vtk.025  cells.vtk.026  cells.vtk.027  cells.vtk.028  cells.vtk.029  cells.vtk.030  cells.vtk.031  cells.vtk.032  cells.vtk.033  cells.vtk.034  cells.vtk.035  cells.vtk.036  cells.vtk.037  cells.vtk.038  cells.vtk.039  cells.vtk.040  cells.vtk.041  cells.vtk.042  cells.vtk.043  (+455 more)
example_simulation/ply/: surface_000.ply  (+149 more)
src/: MCtable.hpp  grid.hpp  initialiser.cpp  initialiser.hpp  main.cpp  makePLY.cpp  makePLY.hpp  pressure.cpp  simulation.cpp  simulation.hpp  timer.hpp  util.cpp  util.hpp  visit_writer.cpp  visit_writer.hpp  writer.cpp  writer.hpp
(+150 files in other folders)
